# sanic-openid-provider

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  client_example.py  pyproject.toml  server.py  setup.py
.github/workflows/: CI.yml
examples/azure_openid/: README.md  server.py
examples/okta_openid/: README.md  server.py
resources/: ec.pem  rsa.pem
sanic_oicp/: __init__.py  authorize_endpoint.py  clients.py  exceptions.py  handlers.py  provider.py  token_endpoint.py  users.py  utils.py  validation.py
sanic_oicp/models/: clients.py  code.py  token.py  users.py
sanic_openid_connect_provider/: __init__.py  authorize_endpoint.py  client.py  exceptions.py  handlers.py  provider.py  token_endpoint.py  utils.py  validation.py
sanic_openid_connect_provider.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sanic_openid_connect_provider/models/: aws_clients.py  aws_code.py  aws_token.py  clients.py  code.py  redis_code.py  redis_token.py  token.py  users.py
sanic_openid_connect_provider/templates/: error.html  form-autosubmit.html
templates/: authorize.html  hidden_inputs.html  login.html
