[tool.poetry]
name = "sanic_openid_connect_provider"
version = "0.8.1"
description = "OpenID Provider framework for sanic"
authors = ["Terry Cain <terry@terrys-home.co.uk>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/terrycain/sanic-openid-provider"
repository = "https://github.com/terrycain/sanic-openid-provider"
keywords = ["sanic", "openid", "provider"]
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9'
]
packages = [
    { include = "sanic_openid_connect_provider" }
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
sanic = ">=20.9.1"
PyJWT = ">=1.6.4"
jwcrypto = ">=0.6.0"
aiohttp = ">=3.4.4"

[tool.poetry.extras]
aws = ["aioboto3>=6.1.0"]
redis = ["aioredis>=1.2.0"]

[tool.poetry.dev-dependencies]
black = "21.6b0"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12", "poetry-dynamic-versioning"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["sanic_openid_connect_provider/__init__.py"]